@@ -2,6 +2,6 @@ lib_LTLIBRARIES = librts2vermes.la
 
 AM_CXXFLAGS=@NOVA_CFLAGS@ 
 
-librts2vermes_la_SOURCES= move-door_vermes.c \
-	move-to-target-az_vermes.c barcodereader_vermes.c ssd650v_comm_vermes.c \
-	bisync_vermes.c util_vermes.c serial_vermes.c oak_comm_vermes.c
+librts2vermes_la_SOURCES= move_door.c \
+	move_to_target_az.c barcodereader.c ssd650v_comm.c \
+	bisync.c util.c serial.c oak_comm.c
