@@ -1,5 +1,6 @@
 2012-06-09
  * template files for XML-RPC images
+ * moved Obs. Vermes specific code to subdirectories
 
 2012-06-06
  * code with XML/JSON exception - properly reply to wrong password
